--- a/assets/styles/global/base.scss
+++ b/assets/styles/global/base.scss
@@ -12,7 +12,8 @@
 html,
 body,
 #__nuxt,
-#__layout {
+#__layout,
+.app{
   height: 100%;
   //overflow-x: hidden;
   background-color: #F3F4F7;
@@ -45,7 +46,16 @@ button {
 li {
   list-style: none;
 }
-
+.wrapper {
+  min-height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.main {
+  width: 100%;
+  flex: 1 1 auto;
+}
 .container {
   width: min(100% - 20px, 1550px);
   margin-inline: auto;
